<resources>
    <string name="app_name">Cha Ching</string>
    <string name="confirm_delete">Confirm deletion</string>
    <string name="confirm_moveToTrash">Confirm move</string>
    <string name="value_format">$ %1$s</string>
    <string-array name="months">
        <item>January %1$d</item>
        <item>February %1$d</item>
...
    <string name="main_downloadMessage">A new version for Cha Ching is available. Do you want to download the update now?</string>
    <string name="main_quickActions_title">Quick actions</string>
    <string name="main_quickActions_analysis">Analysis</string>
    <string name="main_quickActions_transfers">Transactions</string>
    <string name="main_quickActions_types">Categories</string>
    <string name="main_recentTransfers">Recent transactions</string>
    <string name="main_emptyPlaceholder_title">No data to show</string>
    <string name="main_emptyPlaceholder_subtitle">Add transactions to unlock the full potential of Cha Ching</string>
    <string-array name="main_comparisons">
        <item>This is as much as %1$s cups of coffee</item>
        <item>You can buy %1$s ice cream cones with this much money</item>
        <item>Are you interested in %1$s Big Macs?</item>
        <item>You can buy %1$s Italian pizzas</item>
...
    <string name="onboarding_page1_title">Document your transactions</string>
    <string name="onboarding_page1_text">Document all your transactions by earning categories for maximum analysis power</string>
    <string name="onboarding_page2_title">Analyze your transactions</string>
    <string name="onboarding_page2_text">Get the most from your transactions through our analysis</string>
    <string name="onboarding_page3_title">Choose earning categories to track</string>
    <string name="onboarding_page3_text">You can add more earning categories later</string>
    <string name="onboarding_defaultTypeSalary">Salary</string>
    <string name="onboarding_defaultTypeHolidayPay">Holiday Pay</string>
    <string name="onboarding_defaultTypeSickPay">Sick Pay</string>
    <string name="onboarding_defaultTypeSpecialPay">Special Pay</string>
    <string name="onboarding_defaultTypeShareInterest">Share Interest</string>


...
    <string name="button_cancel">Cancel</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_createType">Create category</string>
    <string name="button_save">Save</string>
    <string name="button_import">Import</string>
    <string name="button_showAllTransfers">Show all transactions</string>
    <string name="button_next">Next</string>
    <string name="button_previous">Previous</string>
    <string name="button_finish">Finish</string>
    <string name="button_download">Download</string>
    <string name="button_dismiss">Dismiss</string>
    <string name="button_close">Close</string>
    <string name="button_restore">Restore</string>
    <string name="button_moveToTrash">Move to trash</string>
    <string name="button_showTrash">Show trash</string>
...
